console app was moved to another module and pullRequest review comments were resolved